samples/_failures_safe/1761793158_f52f09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_077bba35.c: In function ‘main’:
./samples/SAFE/__tmp_077bba35.c:162:16: error: missing terminating " character
  162 |         printf("Invalid matrix dimensions.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_077bba35.c:162:9: error: expected expression at end of input
  162 |         printf("Invalid matrix dimensions.\n
      |         ^~~~~~
./samples/SAFE/__tmp_077bba35.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_077bba35.c:162:9: error: expected declaration or statement at end of input
